<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTHF PowerSave</string>
    <string name="service_name">BTHF PowerSave Service</string>
	<string name="save_config">Save</string>
	<string name="toggleButton_YES">YES</string>
	<string name="toggleButton_NO">NO</string>
	<string name="toggleButton_ON">ON</string>
	<string name="toggleButton_OFF">OFF</string>
	<string name="keepBtOnAfterCallEnded">Switch OFF phone\u0027s bluetooth module after call ended</string>
	<string name="switchOffEntrireService">Switch ON/OFF the service (master switch)</string>
	<string name="processAlsoOutgoingCalls">Process also outgoing calls</string>
	<string name="infoText">Visit https://code.google.com/p/bthfpowersave for more information about this product.</string>
	<string name="feedbackText">Visit feedback form and provide your comments: http://tinyurl.com/2f7dh8k</string>
	<string name="toastTextAfterDeletingWidget">BTHF PowerSave went OFF</string>
	<string name="toastTextOnBTDeviceNotPaired">BTHF PowerSave wasn\u0027t able to find any paired BT devices for communication.</string>
	<string name="toastTextOnBTAdapterNotReachable">Bluetooth adapter is not reachable.\nThis might cause serious problems to BTHF PowerSave.</string>
	<string name="forceBTConnection">Force AudioManager to transfer sound to bluetooth headset immediatelly as incoming call appears.</string>
</resources>
