<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical">
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="horizontal">
				<ToggleButton 
					android:textOn="@string/toggleButton_YES"
					android:textOff="@string/toggleButton_NO" 
					android:id="@+id/switchOffBTAfterCallEndedToggleButton" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</ToggleButton>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/keepBtOnAfterCallEnded"
					android:paddingLeft="5sp"
					android:textSize="15sp" />
		</LinearLayout> 
		<LinearLayout 
			android:layout_width="fill_parent" 
			android:layout_height="10px"
			android:orientation="horizontal">
		</LinearLayout>
		<LinearLayout 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="horizontal">
				<ToggleButton 
					android:textOn="@string/toggleButton_YES"
					android:textOff="@string/toggleButton_NO" 
					android:id="@+id/processOutgoingCallsToggleButton" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</ToggleButton>
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:text="@string/processAlsoOutgoingCalls"
					android:paddingLeft="5sp"
					android:textSize="15sp" />
		</LinearLayout> 
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/infoText"
			android:orientation="horizontal"
	  		android:gravity="center"
	  		android:textSize="12dp"
	  		android:linksClickable="true"
	  		android:layout_marginTop="50dp"/>
	</LinearLayout>
</LinearLayout>